--- a/index.html
+++ b/index.html
@@ -1,373 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Coin Creator</title>
-
-    <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-
-    <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
-    <script type="text/javascript">
-
-    function liquidityChecked(){
-
-        if(document.getElementById("checkboxAutoLiquidity").checked){
-
-            show(document.getElementById("rowAutoLiquidity"));
-
-        }else{
-
-            hide(document.getElementById("rowAutoLiquidity"));
-
-        }
-
-    }
-
-    function deflationChecked(){
-
-        if(document.getElementById("checkboxDeflation").checked){
-
-            show(document.getElementById("rowDeflation"));
-            show(document.getElementById("rowAutoLiqCheckbox"));
-
-        }else{
-
-            document.getElementById("checkboxAutoLiquidity").checked = false;
-
-            hideElements();
-
-        }
-
-    }
-
-    function hideElements(){
-
-        hide(document.getElementById("rowDeflation"));
-        hide(document.getElementById("rowAutoLiquidity"));
-        hide(document.getElementById("rowAutoLiqCheckbox"));
-
-    }
-
-    function load(){
-
-        hideElements();
-        document.getElementById("wrapper").style=""; //removes display:none;
-        alert("Deploying takes time, but if shit happens or if you're waiting for more than 2 minutes just refresh the page. You will not pay if contract is not deployed correctly.\n\n Works on Ethereum, BSC, Polygon, Arbitrum and relative testnets.");
-
-    }
-
-    function hide (elements) {
-      elements = elements.length ? elements : [elements];
-      for (var index = 0; index < elements.length; index++) {
-        elements[index].style.display = 'none';
-      }
-    }
-
-    function show (elements, specifiedDisplay) {
-      elements = elements.length ? elements : [elements];
-      for (var index = 0; index < elements.length; index++) {
-        elements[index].style.display = specifiedDisplay || 'block';
-      }
-    }
-    </script>
-
-</head>
-
-<body id="page-top" onload="load()">
-
-    <!-- Page Wrapper -->
-    <div id="wrapper" style="display:none;">
-
-        <!-- Sidebar -->
-        <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
-            <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-                <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
-                </div>
-                <div class="sidebar-brand-text mx-3">Coin Creator</div>
-            </a>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider my-0">
-
-            <!-- Nav Item - Dashboard -->
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="pricing.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Pricing</span></a>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block">
-
-
-        </ul>
-        <!-- End of Sidebar -->
-
-        <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
-
-            <!-- Main Content -->
-            <div id="content">
-
-                <!-- Begin Page Content -->
-                <div class="container-fluid vertical-center" id="maincard">
-
-                    <!-- Illustrations -->
-                    <div class="card shadow mb-4" style="position:relative;overflow-y:auto;min-height:600px;height:48rem;">
-                        <div class="card-header py-3">
-                            <div style="clear:both;">
-                                <h6 class="m-0 font-weight-bold text-primary" style="float:left; font-size:26px!important;">Create and deploy</h6>
-
-                                <a id="connectButton" class=" btn btn-sm btn-secondary shadow-s" style="float:right; font-size:14px;">
-                                    Connect
-                                </a>
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <div class="text-center">
-                                <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 24rem;"
-                                    src="img/undraw_posting_photo.svg" alt="...">
-                            </div>
-
-                            <div class="row">
-
-                                <div class="col-xl-6 col-lg-4">
-
-                                    <form>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Token Name </p>
-
-                                            <input style="color:black;" id="inputName" type="text" class="form-control bg-light small" placeholder="Eg. MyCoin"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Symbol </p>
-
-                                            <input style="color:black;" id="inputSymbol" type="text" class="form-control bg-light small" placeholder="Eg. MCN"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                    </form>
-
-                                </div>
-
-                                <div class="col-xl-6 col-lg-4">
-
-                                    <form>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Initial Supply </p>
-
-                                            <input style="color:black;" id="inputSupply" type="number" class="form-control bg-light small" placeholder="Eg. 1000000000"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Decimals (1-18) </p>
-
-                                            <input style="color:black;" id="inputDecimals" type="number" class="form-control bg-light small" placeholder="Eg. 10"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                    </form>
-
-                                </div>
-
-                            </div>
-
-                            <div class="row" style="height:34px; margin-bottom:1.5rem; margin-top: 1.5rem">
-
-                                <div class="col-xl-6 col-lg-4"  style="height:34px;">
-
-                                    <label class="switch">
-
-                                        <label for="deflation" style="color:#333333;padding-left:80px; height:34px; display: flex; align-items: center;">Deflation</label>
-
-                                        <input type="checkbox" class="deflation" name="deflation" id="checkboxDeflation" onchange="deflationChecked()">
-
-                                        <span class="slider round"></span>
-
-                                    </label>
-
-                                </div>
-
-                            </div>
-
-                            <div class="row" id = "rowDeflation">
-
-                                <div class="col-xl-6 col-lg-4">
-
-                                    <form>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Holders Reward Fee </p>
-
-                                            <input style="color:black;" id="inputHoldersReward" type="number" class="form-control bg-light small" placeholder="Eg. 5"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                    </form>
-
-                                </div>
-
-                                <div class="col-xl-6 col-lg-4">
-
-                                    <form>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Max Transaction Amount </p>
-
-                                            <input style="color:black;" id="inputMaxTxAmount" type="number" class="form-control bg-light small" placeholder="Eg. 50000"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                    </form>
-
-                                </div>
-
-                            </div>
-
-
-                            <div class="row" id = "rowAutoLiqCheckbox" style="height:34px; margin-bottom:1.5rem; margin-top:1rem;">
-
-                                <div class="col-xl-6 col-lg-4" style="height:34px;">
-
-                                    <label class="switch">
-
-                                        <label for="autoliquidity" style="color:#333333;padding-left:80px; height:34px; display: flex; align-items: center;">AutoLiquidity</label>
-
-                                        <input id="checkboxAutoLiquidity" type="checkbox" class="autoliquidity" name="autoliquidity" onchange="liquidityChecked()">
-
-                                        <span class="slider round"></span>
-
-                                    </label>
-
-                                </div>
-
-                            </div>
-
-                            <div class="row" id = "rowAutoLiquidity">
-
-                                <div class="col-xl-6 col-lg-4">
-
-                                    <form>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Auto-LP </p>
-
-                                            <input style="color:black;" id="inputLiquidityTax" type="number" class="form-control bg-light small" placeholder="Eg. 5"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                    </form>
-
-                                </div>
-
-                                <div class="col-xl-6 col-lg-4">
-
-                                    <form>
-
-                                        <div class="input-group" style="padding-bottom: 0.5rem;">
-
-                                            <p style="color:#333333;" class="form-control"> Tokens to add Liq. </p>
-
-                                            <input style="color:black;" id="inputTokensToSellToAddLiquidity" type="number" class="form-control bg-light small" placeholder="Eg. 5000"  aria-describedby="basic-addon2">
-
-                                        </div>
-
-                                    </form>
-
-                                </div>
-
-                            </div>
-
-                            <div style="text-align:center;">
-                                <a id="deployButton" class=" btn btn-sm btn-primary shadow-s disabled_link" style="display:inline-block;padding-left:2rem; padding-right:2rem; margin-top:1.5rem; margin-bottom:2rem;">
-                                    Deploy
-                                    <p id="deployNetwork" style="font-size:14px!important; margin-bottom: 0.25rem!important;"></p>
-                                </a>
-                            </div>
-
-                            <div style="text-align:center;" id="btn_pricing">
-                                <a href="pricing.html" class=" btn btn-sm btn-secondary shadow-s" style="display:inline-block;padding-left:2rem; padding-right:2rem; margin-bottom:2rem; font-size:14px;">
-                                    See Pricing
-                                </a>
-                            </div>
-
-                            <div style="text-align:center;">
-                                <a id="deployedAddress" class=" btn btn-sm btn-secondary shadow-s disabled_link" style="display:inline-block;padding-left:2rem; padding-right:2rem; margin-bottom:2rem; font-size:12px; display:none;">
-
-                                </a>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-
-                <!-- /.container-fluid -->
-
-            </div>
-            <!-- End of Main Content -->
-
-
-        </div>
-        <!-- End of Content Wrapper -->
-
-    </div>
-    <!-- End of Page Wrapper -->
-
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-    </a>
-
-    <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
-
-    <script type="module" src="js/bundle-obfuscated.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-    <script src="js/onboarding/dist/metamask-onboarding.bundle.js"></script>
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-</body>
+<body> test </body>
 
 </html>
