--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     function show (elements, specifiedDisplay) {
       elements = elements.length ? elements : [elements];
       for (var index = 0; index < elements.length; index++) {
-        elements[index].style.display = specifiedDisplay || 'block';
+        elements[index].style.display = specifiedDisplay || '';
       }
     }
     </script>
