--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="./">
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
@@ -106,7 +106,7 @@
 
             <!-- Nav Item - Dashboard -->
             <li class="nav-item active">
-                <a class="nav-link" href="index.html">
+                <a class="nav-link" href="./">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Dashboard</span></a>
             </li>
@@ -131,10 +131,10 @@
             <div id="content">
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid vertical-center" id="maincard">
+                <div class="container-fluid vertical-center" id="maincard" style = "margin-top: 5rem!important;">
 
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4" style="position:relative;overflow-y:auto;min-height:600px;height:48rem;">
+                    <div class="card shadow mb-4" style="position:relative;overflow-y:auto;min-height:600px;height:42rem;">
                         <div class="card-header py-3">
                             <div style="clear:both;">
                                 <h6 class="m-0 font-weight-bold text-primary" style="float:left; font-size:26px!important;">Create and deploy</h6>
@@ -147,7 +147,7 @@
                         <div class="card-body">
                             <div class="text-center">
                                 <img class="img-fluid px-3 px-sm-4 mt-3 mb-4"
-                                    src="img/logo.png" style="max-width: 20%; height: auto;" alt="token creator coin generator">
+                                    src="img/logo.png" style="width: 14rem; height: auto;" alt="token creator coin generator">
                             </div>
 
                             <div class="row">
@@ -244,7 +244,7 @@
 
                                         <div class="input-group" style="padding-bottom: 0.5rem;">
 
-                                            <p style="color:#333333;" class="form-control"> Max Transaction Amount </p>
+                                            <p style="color:#333333;" class="form-control"> Max Txs Amount </p>
 
                                             <input style="color:black;" id="inputMaxTxAmount" type="number" class="form-control bg-light small" placeholder="Eg. 50000"  aria-describedby="basic-addon2">
 
@@ -325,7 +325,7 @@
                             </div>
 
                             <div style="text-align:center;">
-                                <a id="deployedAddress" class=" btn btn-sm btn-secondary shadow-s disabled_link" style="display:inline-block;padding-left:2rem; padding-right:2rem; margin-bottom:2rem; font-size:12px; display:none;">
+                                <a id="deployedAddress" class=" btn btn-sm btn-secondary shadow-s" style="display:inline-block;padding-left:2rem; padding-right:2rem; margin-bottom:2rem; font-size:12px; display:none;">
 
                                 </a>
                             </div>
