--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="card shadow mb-4" style="position:relative;overflow-y:auto;min-height:600px;height:42rem;">
                         <div class="card-header py-3">
                             <div style="clear:both;">
-                                <h6 class="m-0 font-weight-bold text-primary" style="float:left; font-size:26px!important;">Create and deploy</h6>
+                                <h6 id="createText" class="m-0 font-weight-bold text-primary" style="float:left; font-size:26px!important;">Create and deploy</h6>
 
                                 <a id="connectButton" class=" btn btn-sm btn-secondary shadow-s" style="float:right; font-size:14px;">
                                     Connect
