fixed smartphone layout

--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
 
                                         </div>
 
-                                        <div title="This is the number of decimals that your token will have." class="input-group" style="padding-bottom: 0.5rem;">
+                                        <div title="This is the number of decimals that your token will have. It must be beetween 1 and 18." class="input-group" style="padding-bottom: 0.5rem;">
 
-                                            <p style="color:#333333;" class="form-control"> Decimals (1-18) </p>
+                                            <p style="color:#333333;" class="form-control"> Decimals </p>
 
                                             <input style="color:black;" id="inputDecimals" type="number" class="form-control bg-light small" placeholder="Eg. 10"  aria-describedby="basic-addon2">
 
@@ -228,7 +228,7 @@
 
                                         <div title="This is the percentage of each transaction that will be reflected to all the holders of your token AND to a burn address, making your token deflationary while rewarding who holds it." class="input-group" style="padding-bottom: 0.5rem;">
 
-                                            <p style="color:#333333;" class="form-control"> Holders Reward Fee </p>
+                                            <p style="color:#333333;" class="form-control"> Holders Reward </p>
 
                                             <input style="color:black;" id="inputHoldersReward" type="number" class="form-control bg-light small" placeholder="Eg. 5"  aria-describedby="basic-addon2">
 
@@ -244,7 +244,7 @@
 
                                         <div  title="This is the maximum number of tokens that can be moved in a single transaction. It is an anti-whale mechanism." class="input-group" style="padding-bottom: 0.5rem;">
 
-                                            <p style="color:#333333;" class="form-control"> Max Txs Amount </p>
+                                            <p style="color:#333333;" class="form-control"> Max Tx Amount </p>
 
                                             <input style="color:black;" id="inputMaxTxAmount" type="number" class="form-control bg-light small" placeholder="Eg. 50000"  aria-describedby="basic-addon2">
 
