--- a/info.html
+++ b/info.html
@@ -48,14 +48,14 @@
                     <span>Dashboard</span></a>
             </li>
 
-            <li class="nav-item active">
-                <a class="nav-link" href="#">
+            <li class="nav-item">
+                <a class="nav-link" href="pricing.html">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Pricing</span></a>
             </li>
 
-	    <li class="nav-item">
-                <a class="nav-link" href="info.html">
+	    <li class="nav-item active">
+                <a class="nav-link" href="#">
                     <i class="fas fa-fw fa-cog"></i>
                     <span>How it works</span></a>
             </li>
@@ -85,63 +85,23 @@
 
                     <div class="row" id="first_row">
 
-                        <div class="col-xl-6 col-lg-7">
+                        <div class="" style="padding-bottom:4rem;">
                             <div class="card shadow mb-4">
                                 <!-- Card Header  -->
                                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Basic Token</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">How it works</h6>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
 
-                                    <ul>
-                                        <li>Custom Name</li>
-                                        <li>Custom Supply</li>
-                                        <li>Custom Decimals</li>
-                                        <li>Custom Symbol</li>
-                                        </br>
-                                        <li><s>Deflation</s></li>
-                                        <li><s>Auto liquidity</s></li>
-                                        </br>
-                                        <li>Free contract verification (BETA)</li>
-
-                                    </ul>
-
-                                    <h1 style="text-align:center;">20$ </h1>
-                                    <h5 style="text-align:center;">Plus gas fees </h5>
-
-                                </div>
-
-                            </div>
-
-                        </div>
-
-                        <div class="col-xl-6 col-lg-7" style="padding-bottom:4rem;">
-                            <div class="card shadow mb-4">
-                                <!-- Card Header  -->
-                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Deflationary Token</h6>
-                                </div>
-                                <!-- Card Body -->
-                                <div class="card-body">
-
-                                    <ul>
-                                        <li>Custom Name</li>
-                                        <li>Custom Supply</li>
-                                        <li>Custom Decimals</li>
-                                        <li>Custom Symbol</li>
-                                        </br>
-                                        <li>Deflation</li>
-                                        <li>Auto liquidity</li>
-                                        <br>
-                                        <li>Free contract verification (BETA)</li>
-
-                                    </ul>
-
-                                    <h1 style="text-align:center;">35$ </h1>
-                                    <h5 style="text-align:center;">Plus gas fees </h5>
-
-
+                                    <h5>
+				    Connect your Metamask wallet. Select the network where you wish to deploy your token from Metamask. Compile the form for your token. Deploy. Simple as that.
+				    </h5>
+				    
+     				    <h5> Every non-obvious text field provides a description of what it represents, if you hover it with your mouse. If you choose the auto liquidity option, the liquidity pool will be created on the DEX of your chain (Uniswap/Quickswap/Pancakeswap).</h5>
+				    <br>
+    				    <p> Disclamer: this is an amateur project and i will not be able to mantain it in the future. Feel free to test it on a testnet to see that everything works before the real deployment.
+				    The contracts source code is heavily inspired by the source code of SafeMoon. </p>
 
                                 </div>
                             </div>
