--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
                     <span>Pricing</span></a>
             </li>
 
+	    <li class="nav-item">
+                <a class="nav-link" href="info.html">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>How it works</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
